adding a new servlet and redirecting to it

--- a/demoApp3/WebContent/WEB-INF/web.xml
+++ b/demoApp3/WebContent/WEB-INF/web.xml
@@ -4,16 +4,32 @@
 
 <servlet> 
 
+
 <servlet-name> abc</servlet-name>
 <servlet-class>com.addServlet.AddServlet </servlet-class>
 
 </servlet>
 
+<!-- mapping the /add function to the right servlet -->
+<servlet-mapping> 
+<servlet-name>abc</servlet-name>
+<url-pattern>/add</url-pattern>
+</servlet-mapping>
+
+
+<servlet> 
+
+
+<servlet-name>pqr</servlet-name>
+<servlet-class>com.addServlet.SqServlet </servlet-class>
+
+</servlet>
 
 <servlet-mapping> 
-<servlet-name> abc</servlet-name>
-<url-pattern> /add</url-pattern>
+<servlet-name>pqr</servlet-name>
+<url-pattern>/sq</url-pattern>
 </servlet-mapping>
+
 
 
 </web-app>
